chore: update dependencies in package.json
- Added @expo/metro-config, metro, and metro-resolver.
- Updated expo-asset to version 8.6.3.
- Bumped react-native version from 0.69.5 to 0.69.9.

--- a/react-native/littleLemonRN-main/package.json
+++ b/react-native/littleLemonRN-main/package.json
@@ -9,13 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
-    "expo-asset": "^8.6.1",
+    "expo-asset": "~8.6.3",
     "expo-status-bar": "~1.4.0",
+    "metro": "^0.72.4",
+    "metro-resolver": "^0.72.4",
     "react": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.9",
     "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
